k8s-ingress-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: ingress-proj
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: talmosenzon/apps:app1
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: ingress-proj
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: talmosenzon/apps:app2
        ports:
        - containerPort: 80
