k8s-ingress-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: ingress-proj
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: ingress-proj
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
