k8s-ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: ingress-proj
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tal.apps.com
    http:
      paths:
      - path: /app1
        pathType: Exact
        backend:
          service:
            name: app1-svc
            port:
              number: 80
      # - path: /app2
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: app2-svc
      #       port:
      #         number: 80
